fixed footer links size and spacing

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -19,6 +19,10 @@ span, p, h3
             outline: 4px dashed var.$theme-color
 img
     transition: all 0.3s ease
+.touchable
+    min-height: 2.75rem
+    min-line-height: 2.75rem
+    min-width: 2.75rem
 
 .container
     width: 100%
@@ -52,8 +56,13 @@ header
             height: 1.25rem
             width: 1.25rem
     nav
-        #nav-toggle
-            display: none
+        #nav-toggle 
+            // display: none
+            // not touchable though :)
+            position: fixed 
+            right: -10rem
+            width: 3rem
+            height: 3rem
             &:checked ~ ul
                 left: 0
         .nav-toggle-label
@@ -219,14 +228,22 @@ footer
     color: #fff
     p
         margin: 0
+        height: 2.75rem
+        line-height: 2.75rem
+        a
+            display: inline-block
+            color: var.$theme-color
+            &:hover
+                text-decoration: underline
     .social
         display: flex
         justify-content: center
-        gap: 1rem
-        margin: 0.5rem 0
+        gap: 0.25rem
+        margin: 0.125rem 0
         a
-            height: 1.25rem
-            width: 1.25rem
+            padding: 0.5rem
+            height: 2.75rem
+            width: 2.75rem
             color: #fff
             &:hover
                 color: var.$theme-color
